--- a/AIpaca_App/Views/Settings/LogPage.xaml
+++ b/AIpaca_App/Views/Settings/LogPage.xaml
@@ -5,7 +5,8 @@
              xmlns:resources="clr-namespace:AIpaca_App.Resources.Localization"
              xmlns:vm="clr-namespace:AIpaca_App.ViewModels"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             BackgroundColor="{DynamicResource DefaultPageBackgroundColor}">
+             BackgroundColor="{DynamicResource DefaultPageBackgroundColor}"
+             Title="Log" >
 
     <ContentPage.BindingContext>
         <vm:LogViewModel />
@@ -17,9 +18,13 @@
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Frame Margin="10" Padding="10" CornerRadius="10" BorderColor="Gray" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
-                            <StackLayout>
-                                <Label Text="{Binding Timestamp, StringFormat='Timestamp: {0:yyyy-MM-dd HH:mm:ss}'}" />
-                                <Label Text="{Binding Message}" />
+                            <StackLayout Orientation="Vertical" Spacing="10" Padding="10">
+                                <StackLayout.Behaviors>
+                                    <toolkit:TouchBehavior DefaultAnimationDuration="250" DefaultBackgroundColor="Transparent" 
+                                                           PressedBackgroundColor="DarkGray" LongPressCompleted="OnCopyButtonClicked" />
+                                </StackLayout.Behaviors>
+                                <Label Text="{Binding Timestamp, StringFormat='Timestamp: {0:yyyy-MM-dd HH:mm:ss}'}"/>
+                                <Label Text="{Binding Message}"/>
                             </StackLayout>
                         </Frame>
                     </DataTemplate>
