--- a/AIpaca_App/Views/RecordPage.xaml
+++ b/AIpaca_App/Views/RecordPage.xaml
@@ -24,8 +24,14 @@
                 <CollectionView ItemsSource="{Binding Records}">
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <Frame Margin="10" Padding="10" CornerRadius="10" BorderColor="Gray" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
-                                <StackLayout>
+
+
+                            <Frame Margin="10" Padding="0" CornerRadius="10" BorderColor="Gray" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
+                                <StackLayout Spacing="10" Padding="10">
+                                    <StackLayout.Behaviors>
+                                        <toolkit:TouchBehavior DefaultAnimationDuration="250" DefaultBackgroundColor="Transparent" 
+                                                               PressedBackgroundColor="DarkGray" TouchGestureCompleted="OnCopyButtonClicked" />
+                                    </StackLayout.Behaviors>
                                     <Label Text="{Binding RequestTime, StringFormat='Timestamp: {0}'}" FontAttributes="Bold"/>
                                     <Label Text="{Binding Message}" FontAttributes="Italic"/>
                                     <Label Text="{Binding OriginalText, StringFormat='Original: {0}'}" />
