--- a/AIpaca_App/App.xaml
+++ b/AIpaca_App/App.xaml
@@ -7,6 +7,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <conv:InverseBooleanConverter x:Key="InverseBooleanConverter" />
+            <conv:SuccessToColorConverter x:Key="SuccessToColorConverter"/>
             <Color x:Key="DefaultPageBackgroundColor">White</Color>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
