--- a/AIpaca_App/Views/Settings/LogPage.xaml
+++ b/AIpaca_App/Views/Settings/LogPage.xaml
@@ -5,6 +5,7 @@
              xmlns:resources="clr-namespace:AIpaca_App.Resources.Localization"
              xmlns:vm="clr-namespace:AIpaca_App.ViewModels"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             xmlns:converters="clr-namespace:AIpaca_App.Views.Converters"
              BackgroundColor="{DynamicResource DefaultPageBackgroundColor}"
              Title="Log" >
 
@@ -17,7 +18,7 @@
             <CollectionView ItemsSource="{Binding Logs}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Frame Margin="10" Padding="0" CornerRadius="10" BorderColor="Gray" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
+                        <Frame Margin="10" Padding="0" CornerRadius="10" BorderColor="Gray" BackgroundColor="{Binding Success, Converter={StaticResource SuccessToColorConverter}}">
                             <StackLayout Orientation="Vertical" Spacing="10" Padding="10">
                                 <StackLayout.Behaviors>
                                     <toolkit:TouchBehavior DefaultAnimationDuration="250" DefaultBackgroundColor="Transparent" 
@@ -25,6 +26,7 @@
                                 </StackLayout.Behaviors>
                                 <Label Text="{Binding Timestamp, StringFormat='Timestamp: {0:yyyy-MM-dd HH:mm:ss}'}"/>
                                 <Label Text="{Binding Message}"/>
+                                <Label Text="{Binding Success}"/>
                             </StackLayout>
                         </Frame>
                     </DataTemplate>
