--- a/AIpaca_App/Views/SettingsPage.xaml
+++ b/AIpaca_App/Views/SettingsPage.xaml
@@ -88,10 +88,6 @@
                         <Label Text="{x:Static resources:AppResources.lowspecmode}" TextColor="{AppThemeBinding Dark=White, Light=Black}" 
                                FontSize="Medium" FontAttributes="Bold" VerticalOptions="Center" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand"/>
                         <Switch x:Name="LowPowerModeToggle" HorizontalOptions="EndAndExpand" Toggled="LowPowerModeEnabled"/>
-                        <!-- 탭 인식을 위한 GestureRecognizer 추가 -->
-                        <StackLayout.GestureRecognizers>
-                            <TapGestureRecognizer Tapped="OnRippleEffectRequested"/>
-                        </StackLayout.GestureRecognizers>
                     </StackLayout>
 
                 </VerticalStackLayout>
@@ -117,7 +113,36 @@
                                FontSize="Large" FontAttributes="Bold" VerticalOptions="Center" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand"/>
                         <Image Source="setting_right_arrow.png" HorizontalOptions="End" VerticalOptions="Center" WidthRequest="10" HeightRequest="10" />
                     </StackLayout>
-                    
+
+
+                    <!-- 검은색 막대 구분선 추가 -->
+                    <BoxView HeightRequest="1.5" Color="{AppThemeBinding Dark=#555555, Light=#cfcfcf}" HorizontalOptions="FillAndExpand"/>
+
+                    <StackLayout Orientation="Horizontal" Spacing="10" Padding="15">
+                        <StackLayout.Behaviors>
+                            <toolkit:TouchBehavior DefaultAnimationDuration="250" DefaultBackgroundColor="Transparent" 
+                                                   PressedBackgroundColor="DarkGray" TouchGestureCompleted="OnPingButtonClicked"/>
+                        </StackLayout.Behaviors>
+                        <Image Source="setting_ping.png" HorizontalOptions="Start" VerticalOptions="Center" WidthRequest="30" HeightRequest="30" />
+                        <Label Text="{x:Static resources:AppResources.checkserverconnection}" TextColor="{AppThemeBinding Dark=White, Light=Black}" 
+                               FontSize="Large" FontAttributes="Bold" VerticalOptions="Center" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand"/>
+                        <Image Source="setting_right_arrow.png" HorizontalOptions="End" VerticalOptions="Center" WidthRequest="10" HeightRequest="10" />
+                    </StackLayout>
+
+                    <!-- 검은색 막대 구분선 추가 -->
+                    <BoxView HeightRequest="1.5" Color="{AppThemeBinding Dark=#555555, Light=#cfcfcf}" HorizontalOptions="FillAndExpand"/>
+
+                    <StackLayout Orientation="Horizontal" Spacing="10" Padding="15">
+                        <StackLayout.Behaviors>
+                            <toolkit:TouchBehavior DefaultAnimationDuration="250" DefaultBackgroundColor="Transparent" 
+                               PressedBackgroundColor="DarkGray" TouchGestureCompleted="OnBackUpButtonClicked"/>
+                        </StackLayout.Behaviors>
+                        <Image Source="setting_backup.png" HorizontalOptions="Start" VerticalOptions="Center" WidthRequest="30" HeightRequest="30" />
+                        <Label Text="{x:Static resources:AppResources.backup}" TextColor="{AppThemeBinding Dark=White, Light=Black}" 
+                               FontSize="Large" FontAttributes="Bold" VerticalOptions="Center" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand"/>
+                        <Image Source="setting_right_arrow.png" HorizontalOptions="End" VerticalOptions="Center" WidthRequest="10" HeightRequest="10" />
+                    </StackLayout>
+
                 </VerticalStackLayout>
             </Frame>
 
