api 설정 팝업에 api 키 발급 링크 추가

--- a/AIpaca_App/Views/Settings/ApiSettingPopup.xaml
+++ b/AIpaca_App/Views/Settings/ApiSettingPopup.xaml
@@ -4,15 +4,18 @@
                xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
                xmlns:vm="clr-namespace:AIpaca_App.ViewModels"
                x:Class="AIpaca_App.Views.Settings.ApiSettingPopup"
-               Size="300,400"
+               xmlns:resources="clr-namespace:AIpaca_App.Resources.Localization"
                Color="{x:Static Colors.Transparent}"
                x:DataType="vm:ApiSettingViewModel">
 
-    <Border Padding="20" BackgroundColor="{AppThemeBinding Dark=#1c1c1c, Light=#ffffff}">
+    <Border Padding="20" BackgroundColor="{AppThemeBinding Dark=#1c1c1c, Light=#ffffff}"  WidthRequest="300">
+
         <Border.StrokeShape>
             <RoundRectangle CornerRadius="20" />
         </Border.StrokeShape>
-        <VerticalStackLayout Spacing="15">
+
+        <VerticalStackLayout Padding="0" Spacing="15">
+
             <Label Text="현재 API 키" HorizontalOptions="Center"/>
             <Frame CornerRadius="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}" BorderColor="LightGray" Padding="5" HorizontalOptions="Center">
                 <Label x:Name="CurrentApiKeyLabel" Text="{Binding CurrentApiKey}" HorizontalTextAlignment="Center"/>
@@ -21,7 +24,81 @@
             <Frame CornerRadius="10" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}" BorderColor="LightGray" Padding="5">
                 <Entry x:Name="ApiKeyEntry" Placeholder="여기에 API 키를 입력하세요"/>
             </Frame>
-            <Button Text="저장" Clicked="OnSaveClicked"/>
+
+            <Frame Padding="5">
+                <StackLayout Spacing="5">
+
+                    <StackLayout Orientation="Horizontal" Padding="0" Spacing="5" HorizontalOptions="Center">
+                        <Frame CornerRadius="15"  Padding="0" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}"
+                               BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
+                            <StackLayout Orientation="Horizontal" Spacing="10" Padding="5">
+                                <StackLayout.Behaviors>
+                                    <toolkit:TouchBehavior DefaultAnimationDuration="250" DefaultBackgroundColor="Transparent" 
+                                                           PressedBackgroundColor="DarkGray" TouchGestureCompleted="OnCreateGeminiAPIKeyClicked"/>
+                                </StackLayout.Behaviors>
+                                <Label Text="Gemini API 발급" TextColor="{AppThemeBinding Dark=White, Light=Black}" 
+                                       FontSize="Small" FontAttributes="Bold" VerticalOptions="Center" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand"/>
+                            </StackLayout>
+                        </Frame>
+
+                        <Frame CornerRadius="15"  Padding="0" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}"   
+                               BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
+                            <StackLayout Orientation="Horizontal" Spacing="10" Padding="5">
+                                <StackLayout.Behaviors>
+                                    <toolkit:TouchBehavior DefaultAnimationDuration="250" DefaultBackgroundColor="Transparent" 
+                                                           PressedBackgroundColor="DarkGray" TouchGestureCompleted="OnCreateAPIKeyClicked"/>
+                                </StackLayout.Behaviors>
+                                <Label Text="GPT API 발급" TextColor="{AppThemeBinding Dark=White, Light=Black}" 
+                                       FontSize="Small" FontAttributes="Bold" VerticalOptions="Center" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand"/>
+                            </StackLayout>
+                        </Frame>
+                    </StackLayout>
+
+                    <StackLayout Orientation="Horizontal" Padding="0" Spacing="5" HorizontalOptions ="Center">
+
+                        <Frame CornerRadius="15"  Padding="0" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}"
+                               BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
+                            <StackLayout Orientation="Horizontal" Spacing="10" Padding="5">
+                                <StackLayout.Behaviors>
+                                    <toolkit:TouchBehavior DefaultAnimationDuration="250" DefaultBackgroundColor="Transparent" 
+                                                           PressedBackgroundColor="DarkGray" TouchGestureCompleted="OnCreateAPIKeyClicked"/>
+                                </StackLayout.Behaviors>
+                                <Label Text="API 발급" TextColor="{AppThemeBinding Dark=White, Light=Black}" 
+                                       FontSize="Small" FontAttributes="Bold" VerticalOptions="Center" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand"/>
+                            </StackLayout>
+                        </Frame>
+
+                        <Frame CornerRadius="15"  Padding="0" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}"   
+                               BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
+                            <StackLayout Orientation="Horizontal" Spacing="10" Padding="5">
+                                <StackLayout.Behaviors>
+                                    <toolkit:TouchBehavior DefaultAnimationDuration="250" DefaultBackgroundColor="Transparent" 
+                                                           PressedBackgroundColor="DarkGray" TouchGestureCompleted="OnCreateAPIKeyClicked"/>
+                                </StackLayout.Behaviors>
+                                <Label Text="API 발급" TextColor="{AppThemeBinding Dark=White, Light=Black}" 
+                                       FontSize="Small" FontAttributes="Bold" VerticalOptions="Center" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand"/>
+                            </StackLayout>
+                        </Frame>
+
+                    </StackLayout>
+                </StackLayout>
+            </Frame>
+
+            <Frame CornerRadius="15"  Padding="0" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" 
+                   BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
+                <StackLayout Orientation="Horizontal" Spacing="10" Padding="5">
+                    <StackLayout.Behaviors>
+                        <toolkit:TouchBehavior DefaultAnimationDuration="250" DefaultBackgroundColor="Transparent" 
+                                               PressedBackgroundColor="DarkGray" TouchGestureCompleted="OnSaveClicked"/>
+                    </StackLayout.Behaviors>
+                    <Label Text="{x:Static resources:AppResources.save}" TextColor="{AppThemeBinding Dark=White, Light=Black}" 
+                           FontSize="Large" FontAttributes="Bold" VerticalOptions="Center" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand"/>
+                </StackLayout>
+            </Frame>
+
+            <Label Text="" HorizontalOptions="Center"/>
+
+
         </VerticalStackLayout>
     </Border>
 </toolkit:Popup>
