다크모드 미적용 오류 수정

--- a/AIpaca_App/Views/Settings/ApiCreatePopup.xaml
+++ b/AIpaca_App/Views/Settings/ApiCreatePopup.xaml
@@ -15,8 +15,8 @@
         </Border.StrokeShape>
 
         <VerticalStackLayout Padding="0" Spacing="15">
-            
-            <Frame Padding="5">
+
+            <Frame Padding="5" BorderColor="{AppThemeBinding Dark=Gray, Light=Gray}" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
                 <StackLayout Spacing="5">
 
                     <StackLayout Orientation="Horizontal" Padding="0" Spacing="5" HorizontalOptions="Center">
